# weatherbox

./: .gitignore  COMPLETION_SUMMARY.md  README.md  config.yaml.example  pyproject.toml  requirements.txt
.github/: CONSTITUTION.md
.github/workflows/: ci.yml
config/: icons.yaml.example  weather-display.yaml.example
packaging/: README.md
packaging/systemd/: weatherbox-display.service  weatherbox-provisioning.service
specs/001-connect/: flow-diagrams.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-connect-and-display/: spec.md
specs/001-connect-and-display/checklists/: requirements.md
specs/001-connect/checklists/: hil.md  requirements.md
specs/002-weather-display/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-weather-display/checklists/: hil.md  requirements.md
src/weatherbox/: config.py  display_service.py  led8x8icons.py  logging.py
src/weatherbox/brightness/: controller.py  sensor_adapter.py
src/weatherbox/credentials/: store.py
src/weatherbox/display/: adapter.py  frame_capture.py  rpi_adapter.py
src/weatherbox/icons/: loader.py
src/weatherbox/provisioning/: ap_manager.py  app.py  boot.py
src/weatherbox/weather/: forecast_parser.py  metoffice_adapter.py  retry_scheduler.py
src/weatherbox/wifi/: adapter.py  (+2 more)
tests/integration/: test_forecast_fetch_and_render.py  test_provision_flow.py  test_update_schedule.py
tests/unit/: test_brightness_controller.py  test_forecast_parser.py  test_retry_scheduler.py  test_wifi_adapter.py
tools/hil/: smoke_display_rotation.sh  smoke_provision.sh
(+1 files in other folders)
