[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weatherbox"
version = "0.1.0"
description = "Weather-driven LED display for Raspberry Pi"
authors = [{name = "Weatherbox Contributors"}]
requires-python = ">=3.8"

dependencies = [
    "requests>=2.28.0",
    "apscheduler>=3.10.0",
    "pytz>=2023.3",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
    "freezegun>=1.3.0",
]

display = [
    "rpi-rgb-led-matrix>=1.3.0",
]

sensors = [
    "adafruit-circuitpython-ads1x15>=1.0.0",
    "adafruit-circuitpython-tsl2561>=1.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["weatherbox"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
